# Financial-Rag-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.streamlit/: config.toml  secrets.toml.example
app/: main.py
app/components/: __init__.py  chat.py  memo.py  metrics.py
data/eval/: test_questions.json
docs/: architecture.md  phase2-prompt-guide.md  phase3-prompt-guide.md  plan-retrieval.md
scripts/: evaluate.py  ingest.py
src/: __init__.py  config.py
src/agents/: __init__.py  financial_tools.py  memo_generator.py  models.py  query_engine.py
src/chunking/: __init__.py  financial_chunker.py  models.py  table_handler.py
src/evaluation/: __init__.py  models.py  ragas_eval.py  test_questions.py
src/ingestion/: __init__.py  edgar_client.py  filing_parser.py  models.py
src/retrieval/: __init__.py  bm25_search.py  hybrid.py  models.py  reranker.py  vector_store.py
tests/: __init__.py  conftest.py  test_agents.py  test_chunking.py  test_evaluation.py  test_ingestion.py  test_retrieval.py
