[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-rag-agent"
version = "0.1.0"
description = "RAG system for SEC financial filings with hybrid search and agentic analysis"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: hits real SEC EDGAR API (deselect with '-m not integration')",
    "slow: marks tests as slow-running",
]

[tool.ruff]
line-length = 100
target-version = "py310"
